Jenkins test commit