@@ -13,7 +13,7 @@ import java.io.File;
 import java.io.IOException;
 
 public class BaseTest {
-    private ThreadLocal<WebDriver> driver = new ThreadLocal<>();
+    private final ThreadLocal<WebDriver> driver = new ThreadLocal<>();
 
     private void setDriver(WebDriver driver) {
         this.driver.set(driver);
@@ -26,21 +26,21 @@ public class BaseTest {
     @Parameters("browser")
     @BeforeMethod
     public void startDriver(String browser) {
-        browser = System.getProperty("browser");//, browser);
+        ///browser = System.getProperty("browser");//, browser);
         setDriver(new DriverManager().initializeDriver(browser));
-        System.out.println("CURRENT THREAD: " + Thread.currentThread().getId() + " ," + " DRIVER = " + getDriver());
+        System.out.println("CURRENT THREAD: " + Thread.currentThread().threadId() + " ," + " DRIVER = " + getDriver());
     }
 
     @AfterMethod
     public void quitDriver() {
-        System.out.println("CURRENT THREAD: " + Thread.currentThread().getId() + " ," + " DRIVER = " + getDriver());
+        System.out.println("CURRENT THREAD: " + Thread.currentThread().threadId() + " ," + " DRIVER = " + getDriver());
         getDriver().quit();
     }
 
     public String takeScreenshot(WebDriver driver, String testName) throws IOException {
         TakesScreenshot ts = (TakesScreenshot) driver;
         File sourceFile = ts.getScreenshotAs(OutputType.FILE);
-        String destinationPath = System.getProperty("user.dir") + "\\Screenshots\\" + testName + ".png";
+        String destinationPath = System.getProperty("user.dir") + "\\screenshots\\" + testName + ".png";
         FileUtils.copyFile(sourceFile, new File(destinationPath));
         return destinationPath;
     }
